@@ -1,3 +1,11 @@
+2023-01-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCcse.c: Improve pointer aliasing handling,
+	  minor reduction in memory leakage
+	* support/regression/tests/bug-2957.c,
+	  support/regression/tests/gcc-torture-execute-pr20466-1.c:
+	  Reenable tests
+
 2023-01-08 Benedikt Freisen <b.freisen AT gmx.net>
 
 	* src/SDCCmain.c:
